--- a/java/res/values-nl/strings.xml
+++ b/java/res/values-nl/strings.xml
@@ -108,7 +108,7 @@
     <string name="spoken_description_mode_alpha" msgid="3528307674390156956">"Alfanumeriek toetsenbord"</string>
     <string name="spoken_description_mode_phone" msgid="6520207943132026264">"Toetsenbord telefoon"</string>
     <string name="spoken_description_mode_phone_shift" msgid="5499629753962641227">"Telefoonsymbolen"</string>
-    <string name="voice_input" msgid="3583258583521397548">"Sleutel voor spraakinvoer"</string>
+    <string name="voice_input" msgid="3583258583521397548">"Toets voor spraakinvoer"</string>
     <string name="voice_input_modes_main_keyboard" msgid="3360660341121083174">"Op hoofdtoetsenbord"</string>
     <string name="voice_input_modes_symbols_keyboard" msgid="7203213240786084067">"Op symbooltoetsenb."</string>
     <string name="voice_input_modes_off" msgid="3745699748218082014">"Uitgeschakeld"</string>
