--- a/java/res/values-ca/strings.xml
+++ b/java/res/values-ca/strings.xml
@@ -190,7 +190,7 @@
     <string name="setup_step3_action" msgid="600879797256942259">"Configura idiomes addicionals"</string>
     <string name="setup_finish_action" msgid="276559243409465389">"Finalitzat"</string>
     <string name="show_setup_wizard_icon" msgid="5008028590593710830">"Mostra la icona de l\'aplicació"</string>
-    <string name="show_setup_wizard_icon_summary" msgid="4119998322536880213">"Mostra la icona de l\'aplicació a la barra d\'execució ràpida"</string>
+    <string name="show_setup_wizard_icon_summary" msgid="4119998322536880213">"Mostra la icona de l\'aplicació al menú d\'aplicacions"</string>
     <string name="app_name" msgid="6320102637491234792">"Proveïdor de diccionaris"</string>
     <string name="dictionary_provider_name" msgid="3027315045397363079">"Proveïdor de diccionaris"</string>
     <string name="dictionary_service_name" msgid="6237472350693511448">"Servei de diccionari"</string>
