--- a/java/res/values-sw/strings.xml
+++ b/java/res/values-sw/strings.xml
@@ -49,7 +49,7 @@
     <string name="use_double_space_period_summary" msgid="6532892187247952799">"Kugonga mara mbili kwenye upau nafasi kunaingiza kitone kikifuatiwa na nafasi"</string>
     <string name="auto_cap" msgid="1719746674854628252">"Uwekaji wa herufi kubwa kiotomatiki"</string>
     <string name="auto_cap_summary" msgid="7934452761022946874">"Fanya herufi kubwa neno la kwanza la kila sentensi"</string>
-    <string name="edit_personal_dictionary" msgid="3996910038952940420">"Kamusi binafsi"</string>
+    <string name="edit_personal_dictionary" msgid="3996910038952940420">"Kamusi ya kibinafsi"</string>
     <string name="configure_dictionaries_title" msgid="4238652338556902049">"Nyongeza za kamusi"</string>
     <string name="main_dictionary" msgid="4798763781818361168">"Kamusi kuu"</string>
     <string name="prefs_show_suggestions" msgid="8026799663445531637">"Onyesha mapendekezo ya marekebisho"</string>
