--- a/java/res/values-sw/strings.xml
+++ b/java/res/values-sw/strings.xml
@@ -91,8 +91,8 @@
     <string name="language_selection_title" msgid="3666971864764478269">"Lugha"</string>
     <string name="help_and_feedback" msgid="5328219371839879161">"Usaidizi na maoni"</string>
     <string name="select_language" msgid="5709487854987078367">"Lugha"</string>
-    <string name="hint_add_to_dictionary" msgid="2645988432867033007">"Gonga tena ili uhifadhi"</string>
-    <string name="hint_add_to_dictionary_without_word" msgid="6710206006427574423">"Gonga hapa ili uhifadhi"</string>
+    <string name="hint_add_to_dictionary" msgid="2645988432867033007">"Gusa tena ili uhifadhi"</string>
+    <string name="hint_add_to_dictionary_without_word" msgid="6710206006427574423">"Gusa hapa ili uhifadhi"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Kamusi inapatikana"</string>
     <string name="keyboard_layout" msgid="8451164783510487501">"Maandhari ya kibodi"</string>
     <string name="switch_accounts" msgid="3321216593719006162">"Badili akaunti"</string>
@@ -204,7 +204,7 @@
     <string name="user_dict_settings_edit_dialog_title" msgid="3765774633869590352">"Badilisha neno"</string>
     <string name="user_dict_settings_context_menu_edit_title" msgid="6812255903472456302">"Hariri"</string>
     <string name="user_dict_settings_context_menu_delete_title" msgid="8142932447689461181">"Futa"</string>
-    <string name="user_dict_settings_empty_text" msgid="6889278304342592383">"Huna maneno yoyote katika kamusi ya mtumiaji. Gonga kitufe cha Ongeza (+) ili kuongeza neno."</string>
+    <string name="user_dict_settings_empty_text" msgid="6889278304342592383">"Huna maneno yoyote katika kamusi ya mtumiaji. Gusa kitufe cha Ongeza (+) ili kuongeza neno."</string>
     <string name="user_dict_settings_all_languages" msgid="8276126583216298886">"Ya lugha zote"</string>
     <string name="user_dict_settings_more_languages" msgid="7131268499685180461">"Lugha zingine..."</string>
     <string name="user_dict_settings_delete" msgid="110413335187193859">"Futa"</string>
