--- a/java/res/values-my/strings.xml
+++ b/java/res/values-my/strings.xml
@@ -98,7 +98,7 @@
     <string name="switch_accounts" msgid="3321216593719006162">"အကောင့်များကို ပြောင်းရန်"</string>
     <string name="no_accounts_selected" msgid="2073821619103904330">"အကောင့်များ မရွေးရသေးပါ"</string>
     <string name="account_selected" msgid="2846876462199625974">"<xliff:g id="EMAIL_ADDRESS">%1$s</xliff:g>အား လတ်တလော သုံးန​ေ၏"</string>
-    <string name="account_select_ok" msgid="9141195141763227797">"အိုကေ"</string>
+    <string name="account_select_ok" msgid="9141195141763227797">"OK"</string>
     <string name="account_select_cancel" msgid="5181012062618504340">"မလုပ်တော့"</string>
     <string name="account_select_sign_out" msgid="3299651159390187933">"ထွက်ရန်"</string>
     <string name="account_select_title" msgid="6279711684772922649">"သုံးမည့်အကောင့်ကို ရွေးရန်"</string>
@@ -195,7 +195,7 @@
     <string name="user_dict_settings_add_screen_title" msgid="5818914331629278758">"စကားစု"</string>
     <string name="user_dict_settings_add_dialog_more_options" msgid="5671682004887093112">"နောက်ထပ် ရွေးစရာ"</string>
     <string name="user_dict_settings_add_dialog_less_options" msgid="2716586567241724126">"ရွေးစရာလျှော့ရန်"</string>
-    <string name="user_dict_settings_add_dialog_confirm" msgid="4703129507388332950">"အိုကေ"</string>
+    <string name="user_dict_settings_add_dialog_confirm" msgid="4703129507388332950">"OK"</string>
     <string name="user_dict_settings_add_word_option_name" msgid="6665558053408962865">"စာလုံး:"</string>
     <string name="user_dict_settings_add_shortcut_option_name" msgid="3094731590655523777">"အတိုကောက်:"</string>
     <string name="user_dict_settings_add_locale_option_name" msgid="4738643440987277705">"ဘာသာစကား:"</string>
